[gd_scene load_steps=3 format=3 uid="uid://udsjaawykctm"]

[ext_resource type="Script" uid="uid://8p2vf8sfcc0d" path="res://scripts/GameUI.gd" id="1_sjnlv"]
[ext_resource type="Theme" uid="uid://cqdnew8fru4ev" path="res://scenes/UI/GameUI.tres" id="2_01rbu"]

[node name="GameUi" type="CanvasLayer"]
script = ExtResource("1_sjnlv")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_01rbu")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 0
offset_left = 24.0
offset_top = 292.0
offset_right = 160.0
offset_bottom = 798.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="GoldLabel" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="BtnGenerator" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Generator 50g"

[node name="BtnShield" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Shield 80g"

[node name="BtnTurret" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Turret 100g"

[node name="BtnFactory" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Ranged
Factory 150g"

[node name="FPSLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 54.0
offset_bottom = 22.0

[node name="RespawnOverlay" type="ColorRect" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.4)

[node name="RespawnLabel" type="Label" parent="Control/RespawnOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "10"
horizontal_alignment = 1

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/BtnGenerator" to="." method="_on_btn_generator_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/BtnShield" to="." method="_on_btn_shield_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/BtnTurret" to="." method="_on_btn_turret_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/BtnFactory" to="." method="_on_btn_factory_pressed"]
